--- a/CAT201_PROJECT/html/admin_products.html
+++ b/CAT201_PROJECT/html/admin_products.html
@@ -10,7 +10,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
    <!-- custom css file link  -->
-   <link rel="stylesheet" href="css/admin_style.css">
+   <link rel="stylesheet" href="CAT201_PROJECT/css/admin_style.css">
 
 </head>
 <body>
@@ -32,11 +32,11 @@
       <div class="profile">
          <img src="uploaded_img/default.png" alt="">
          <p>Admin</p>
-         <a href="admin_update_profile.php" class="btn">update profile</a>
-         <a href="logout.php" class="delete-btn">logout</a>
+         <a href="admin_update_profile.html" class="btn">update profile</a>
+         <a href="login.html" class="delete-btn">logout</a>
          <div class="flex-btn">
-            <a href="login.php" class="option-btn">login</a>
-            <a href="register.php" class="option-btn">register</a>
+            <a href="login.html" class="option-btn">login</a>
+            <a href="register.html" class="option-btn">register</a>
          </div>
       </div>
    </div>
@@ -85,11 +85,11 @@
    <section class="box-container">
       <div class="box">
          <h3>quick links</h3>
-         <a href="admin_page.php"> <i class="fas fa-angle-right"></i> home</a>
-         <a href="admin_products.php"> <i class="fas fa-angle-right"></i> products</a>
-         <a href="admin_orders.php"> <i class="fas fa-angle-right"></i> orders</a>
-         <a href="admin_users.php"> <i class="fas fa-angle-right"></i> users</a>
-         <a href="admin_contacts.php"> <i class="fas fa-angle-right"></i> messages</a>
+         <a href="admin_page.html"> <i class="fas fa-angle-right"></i> home</a>
+         <a href="admin_products.html"> <i class="fas fa-angle-right"></i> products</a>
+         <a href="admin_orders.html"> <i class="fas fa-angle-right"></i> orders</a>
+         <a href="admin_users.html"> <i class="fas fa-angle-right"></i> users</a>
+         <a href="admin_contacts.html"> <i class="fas fa-angle-right"></i> messages</a>
       </div>
       <div class="box">
          <h3>contact info</h3>
