--- a/CAT201_PROJECT/html/admin_user.html
+++ b/CAT201_PROJECT/html/admin_user.html
@@ -15,32 +15,32 @@
 </head>
 <body>
 
-<header class="header">
-   <div class="flex">
-      <a href="admin_page.html" class="logo">Admin<span>Panel</span></a>
-      <nav class="navbar">
-        <a href="admin_page.html">home</a>
-        <a href="admin_products.html">products</a>
-        <a href="admin_orders.html">orders</a>
-        <a href="admin_users.html">users</a>
-        <a href="admin_contacts.html">messages</a>
-      </nav>
-      <div class="icons">
-         <div id="menu-btn" class="fas fa-bars"></div>
-         <div id="user-btn" class="fas fa-user"></div>
-      </div>
-      <div class="profile">
-         <img src="uploaded_img/default.png" alt="">
-         <p>Admin</p>
-         <a href="admin_update_profile.php" class="btn">update profile</a>
-         <a href="logout.php" class="delete-btn">logout</a>
-         <div class="flex-btn">
-            <a href="login.php" class="option-btn">login</a>
-            <a href="register.php" class="option-btn">register</a>
+   <header class="header">
+      <div class="flex">
+         <a href="admin_page.html" class="logo">Admin<span>Panel</span></a>
+         <nav class="navbar">
+            <a href="admin_page.html">home</a>
+            <a href="admin_products.html">products</a>
+            <a href="admin_orders.html">orders</a>
+            <a href="admin_users.html">users</a>
+            <a href="admin_contacts.html">messages</a>
+         </nav>
+         <div class="icons">
+            <div id="menu-btn" class="fas fa-bars"></div>
+            <div id="user-btn" class="fas fa-user"></div>
+         </div>
+         <div class="profile">
+            <img src="uploaded_img/default.png" alt="">
+            <p>Admin</p>
+            <a href="admin_update_profile.html" class="btn">update profile</a>
+            <a href="login.html" class="delete-btn">logout</a>
+            <div class="flex-btn">
+               <a href="login.html" class="option-btn">login</a>
+               <a href="register.html" class="option-btn">register</a>
+            </div>
          </div>
       </div>
-   </div>
-</header>
+   </header>
 
 <section class="user-accounts">
 
@@ -65,11 +65,11 @@
    <section class="box-container">
       <div class="box">
          <h3>quick links</h3>
-         <a href="admin_page.php"> <i class="fas fa-angle-right"></i> home</a>
-         <a href="admin_products.php"> <i class="fas fa-angle-right"></i> products</a>
-         <a href="admin_orders.php"> <i class="fas fa-angle-right"></i> orders</a>
-         <a href="admin_users.php"> <i class="fas fa-angle-right"></i> users</a>
-         <a href="admin_contacts.php"> <i class="fas fa-angle-right"></i> messages</a>
+         <a href="admin_page.html"> <i class="fas fa-angle-right"></i> home</a>
+         <a href="admin_products.html"> <i class="fas fa-angle-right"></i> products</a>
+         <a href="admin_orders.html"> <i class="fas fa-angle-right"></i> orders</a>
+         <a href="admin_users.html"> <i class="fas fa-angle-right"></i> users</a>
+         <a href="admin_contacts.html"> <i class="fas fa-angle-right"></i> messages</a>
       </div>
       <div class="box">
          <h3>contact info</h3>
