--- a/CAT201_PROJECT/html/admin_products.html
+++ b/CAT201_PROJECT/html/admin_products.html
@@ -10,7 +10,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
    <!-- custom css file link  -->
-   <link rel="stylesheet" href="CAT201_PROJECT/css/admin_style.css">
+   <link rel="stylesheet" href="css/admin_style.css">
 
 </head>
 <body>
