--- a/CAT201_PROJECT/html/category.html
+++ b/CAT201_PROJECT/html/category.html
@@ -10,7 +10,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
    <!-- custom css file link  -->
-   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="../css/style.css">
 
 </head>
 <body>
@@ -33,9 +33,9 @@
          <a href="cart.html"><i class="fas fa-shopping-cart"></i><span>(0)</span></a>
       </div>
       <div class="profile">
-         <img src="uploaded_img/default.png" alt="">
+         <img src="../uploaded_img/default.png" alt="Default Image">
          <p>Guest</p>
-         <a href="user_profile_update.php" class="btn">update profile</a>
+         <a href="user_profile_update.html" class="btn">update profile</a>
          <a href="login.html" class="delete-btn">logout</a>
          <div class="flex-btn">
             <a href="login.html" class="option-btn">login</a>
@@ -86,7 +86,7 @@
     <p class="credit"> &copy; CAT201 Project 2024 by <span>Team YumYum</span> | Jom Makan </p>
  </footer>
 
-<script src="js/script.js"></script>
+ <script src="../js/script.js"></script>
 
 </body>
 </html>
