modified:   CAT201_PROJECT/html/about.html     modified:   CAT201_PROJECT/html/admin_contacts.html 	modified:   CAT201_PROJECT/html/admin_header.html 	modified:   CAT201_PROJECT/html/admin_orders.html 	modified:   CAT201_PROJECT/html/admin_page.html 	modified:   CAT201_PROJECT/html/admin_products.html 	renamed:    CAT201_PROJECT/html/admin_updare_product.html -> CAT201_PROJECT/html/admin_update_product.html 	modified:   CAT201_PROJECT/html/admin_update_profile.html 	renamed:    CAT201_PROJECT/html/admin_user.html -> CAT201_PROJECT/html/admin_users.html 	modified:   CAT201_PROJECT/html/cart.html 	modified:   CAT201_PROJECT/html/checkout.html 	modified:   CAT201_PROJECT/html/contact.html 	modified:   CAT201_PROJECT/html/home.html 	modified:   CAT201_PROJECT/html/login.html 	modified:   CAT201_PROJECT/html/orders.html 	modified:   CAT201_PROJECT/html/register.html 	modified:   CAT201_PROJECT/html/search_page.html 	modified:   CAT201_PROJECT/html/shop.html 	modified:   CAT201_PROJECT/html/user_profile_update.html 	modified:   CAT201_PROJECT/html/view_page.html 	modified:   CAT201_PROJECT/html/wishlist.html

--- a/CAT201_PROJECT/html/admin_contacts.html
+++ b/CAT201_PROJECT/html/admin_contacts.html
@@ -10,11 +10,12 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
    <!-- custom css file link  -->
-   <link rel="stylesheet" href="css/admin_style.css">
+   <link rel="stylesheet" href="../css/admin_style.css">
 
 </head>
 <body>
 
+   <!-- ADMIN PANEL HEADER -->
 <header class="header">
    <div class="flex">
       <a href="admin_page.html" class="logo">Admin<span>Panel</span></a>
@@ -30,7 +31,7 @@
          <div id="user-btn" class="fas fa-user"></div>
       </div>
       <div class="profile">
-         <img src="uploaded_img/default.png" alt="">
+         <img src="../uploaded_img/default.png" alt="">
          <p>Admin</p>
          <a href="admin_update_profile.html" class="btn">update profile</a>
          <a href="login.html" class="delete-btn">logout</a>
@@ -43,11 +44,12 @@
 </header>
 
 <section class="messages">
-
    <h1 class="title">messages</h1>
 
    <div class="box-container">
-      <p class="empty">you have no messages!</p>
+      <!-- User can send message from contact page -->
+       <!-- if not message from customer, it will display... -->
+      <p class="empty">You have no messages!</p>
    </div>
 
 </section>
@@ -64,16 +66,17 @@
       </div>
       <div class="box">
          <h3>contact info</h3>
-         <p> <i class="fas fa-phone"></i> +123-456-7890 </p>
-         <p> <i class="fas fa-phone"></i> +111-222-3333 </p>
-         <p> <i class="fas fa-envelope"></i> adminpanel@gmail.com </p>
-         <p> <i class="fas fa-map-marker-alt"></i> Kuala Lumpur, Malaysia - 50000 </p>
+         <p> <i class="fas fa-phone"></i> +03-111-2222 </p>
+         <p> <i class="fas fa-phone"></i> +03-222-3333 </p>
+         <p> <i class="fas fa-envelope"></i> adminpanel_jommakan@gmail.com </p>
+         <p> <i class="fas fa-map-marker-alt"></i> Penang, Malaysia - 50000 </p>
       </div>
    </section>
-   <p class="credit"> &copy; Admin Panel 2024 | <span>Jom Makan Team</span> </p>
+   <p class="credit"> &copy; Admin Panel 2024 | Team YumYum <span>Jom Makan </span> </p>
 </footer>
 
-<script src="js/script.js"></script>
+<script src="../js/script.js"></script>
+
 
 </body>
 </html>
