--- a/CAT201_PROJECT/html/admin_page.html
+++ b/CAT201_PROJECT/html/admin_page.html
@@ -10,7 +10,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
    <!-- custom css file link  -->
-   <link rel="stylesheet" href="css/admin_style.css">
+   <link rel="stylesheet" href="../css/admin_style.css">
 
 </head>
 <body>
@@ -30,7 +30,7 @@
             <div id="user-btn" class="fas fa-user"></div>
          </div>
          <div class="profile">
-            <img src="uploaded_img/default.png" alt="">
+            <img src="../uploaded_img/default.png" alt="">
             <p>Admin</p>
             <a href="admin_update_profile.html" class="btn">update profile</a>
             <a href="login.html" class="delete-btn">logout</a>
@@ -42,57 +42,73 @@
       </div>
    </header>
 
+   <!-- ADMIN DASHBOARD -->
 <section class="dashboard">
-
    <h1 class="title">dashboard</h1>
-
    <div class="box-container">
-
       <div class="box">
+         <!-- total price for orders status = pending -->
+         <!-- will change when new order come in, set default is 0.. -->
          <h3>RM0/-</h3>
+         <!-- shows the pending order that not complete yet. -->
          <p>total pendings</p>
+         <!-- go to admin order page when click on 'see order' button. -->
          <a href="admin_orders.html" class="btn">see orders</a>
       </div>
 
       <div class="box">
+         <!-- total price for order status = completed -->
+          <!-- also will change after(increase) after a order's status changing from pending to completed. -->
          <h3>RM0/-</h3>
          <p>completed orders</p>
+         <!-- go to admin order page when click on 'see order' button. -->
          <a href="admin_orders.html" class="btn">see orders</a>
       </div>
 
       <div class="box">
          <h3>0</h3>
          <p>orders placed</p>
+         <!-- go to admin order page when click on 'see order' button. -->
          <a href="admin_orders.html" class="btn">see orders</a>
       </div>
 
       <div class="box">
+         <!-- total product that have in this website -->
          <h3>0</h3>
          <p>products added</p>
+         <!-- go to admin product page when click on 'see product' button. -->
          <a href="admin_products.html" class="btn">see products</a>
       </div>
 
       <div class="box">
+         <!-- total user that have or have register for the website -->
          <h3>0</h3>
          <p>total users</p>
+         <!-- go to admin user page when click on 'see accounts' button. -->
          <a href="admin_users.html" class="btn">see accounts</a>
       </div>
 
       <div class="box">
+         <!-- total admin for the website -->
          <h3>0</h3>
          <p>total admins</p>
+         <!-- go to admin user page when click on 'see accounts' button. -->
          <a href="admin_users.html" class="btn">see accounts</a>
       </div>
 
       <div class="box">
+         <!-- total users for this website, including admin -->
          <h3>0</h3>
          <p>total accounts</p>
+         <!-- go to admin user page when click on 'see accounts' button. -->
          <a href="admin_users.html" class="btn">see accounts</a>
       </div>
 
       <div class="box">
+         <!-- total message that send back customers via CONTACT  -->
          <h3>0</h3>
          <p>total messages</p>
+         <!-- go to admin contact page when click on 'see message' button. -->
          <a href="admin_contacts.html" class="btn">see messages</a>
       </div>
 
@@ -112,16 +128,17 @@
       </div>
       <div class="box">
          <h3>contact info</h3>
-         <p> <i class="fas fa-phone"></i> +123-456-7890 </p>
+         <p> <i class="fas fa-phone"></i> +03-111-2222 </p>
          <p> <i class="fas fa-phone"></i> +111-222-3333 </p>
-         <p> <i class="fas fa-envelope"></i> adminpanel@gmail.com </p>
-         <p> <i class="fas fa-map-marker-alt"></i> Kuala Lumpur, Malaysia - 50000 </p>
+         <p> <i class="fas fa-envelope"></i> adminpanel_jommakan@gmail.com </p>
+         <p> <i class="fas fa-map-marker-alt"></i> Penang, Malaysia - 50000 </p>
       </div>
    </section>
-   <p class="credit"> &copy; Admin Panel 2024 | <span>Jom Makan Team</span> </p>
+   <p class="credit"> &copy; Admin Panel 2024 | Team YumYum <span>Jom Makan </span> </p>
 </footer>
 
-<script src="js/script.js"></script>
+<script src="../js/script.js"></script>
+
 
 </body>
 </html>
