--- a/CAT201_PROJECT/html/wishlist.html
+++ b/CAT201_PROJECT/html/wishlist.html
@@ -10,7 +10,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
    <!-- custom css file link  -->
-   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="../css/style.css">
 
 </head>
 <body>
@@ -55,7 +55,7 @@
 
    <div class="wishlist-total">
       <p>grand total : <span>RM0/-</span></p>
-      <a href="shop.php" class="option-btn">continue shopping</a>
+      <a href="shop.html" class="option-btn">continue shopping</a>
       <a href="#" class="delete-btn disabled">delete all</a>
    </div>
 
@@ -95,7 +95,7 @@
     <p class="credit"> &copy; CAT201 Project 2024 by <span>Team YumYum</span> | Jom Makan </p>
  </footer>
 
-<script src="js/script.js"></script>
+ <script src="../js/script.js"></script>
 
 </body>
 </html>
