--- a/CAT201_PROJECT/html/about.html
+++ b/CAT201_PROJECT/html/about.html
@@ -10,11 +10,12 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
    <!-- custom css file link  -->
-   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="../css/style.css">
 
 </head>
 <body>
 
+   <!-- HEADER -->
 <header class="header">
    <div class="flex">
       <a href="admin_page.html" class="logo">Jom Makan<span>.</span></a>
@@ -25,6 +26,8 @@
         <a href="about.html">about</a>
         <a href="contact.html">contact</a>
       </nav>
+
+      <!-- icon in the header: navigation -->
       <div class="icons">
          <div id="menu-btn" class="fas fa-bars"></div>
          <div id="user-btn" class="fas fa-user"></div>
@@ -32,41 +35,47 @@
          <a href="wishlist.html"><i class="fas fa-heart"></i><span>(0)</span></a>
          <a href="cart.html"><i class="fas fa-shopping-cart"></i><span>(0)</span></a>
       </div>
+
+      <!-- default profile: infomation user register -->
       <div class="profile">
-         <img src="uploaded_img/default.png" alt="">
+         <img src="../uploaded_img/default.png" alt="">
          <p>Guest</p>
          <a href="user_profile_update.html" class="btn">update profile</a>
          <a href="login.html" class="delete-btn">logout</a>
          <div class="flex-btn">
-            <a href="login.php" class="option-btn">login</a>
+            <a href="login.html" class="option-btn">login</a>
             <a href="register.html" class="option-btn">register</a>
          </div>
       </div>
    </div>
 </header>
 
+   <!-- ABOUT US -->
 <section class="about">
    <div class="row">
       <div class="box">
-         <img src="images/about.png" alt="">
+         <img src="../images/about.png" alt="">
          <h3>why choose us?</h3>
          <p>We bring you the finest selection of authentic Malaysian spices, sourced sustainably and packed with natural goodness. Our commitment to quality ensures every product is fresh, organic, and free from artificial additives, making it the perfect choice for healthy, flavorful cooking while supporting local farmers and traditions.</p>
+         <!-- When click 'contact us' button, it will jump to contact page. -->
          <a href="contact.html" class="btn">contact us</a>
       </div>
       <div class="box">
-         <img src="images/about2.png" alt="">
+         <img src="../images/about2.png" alt="">
          <h3>what we provide?</h3>
          <p>We offer a diverse range of premium Malaysian spices and ingredients, including fresh aromatic herbs, fiery chilies, nutty and sweet spices, and herbal blends. Additionally, we provide recipe inspiration, cooking tips, and curated spice sets to help you create authentic Malaysian dishes effortlessly. Whether you're a home cook or a professional chef, we have everything you need to bring the rich flavors of Malaysia to your table.</p>
+         <!-- When click 'our shop' button, it will jump to shop page. -->
          <a href="shop.html" class="btn">our shop</a>
       </div>
    </div>
 </section>
 
+   <!-- CUSTOMER REVIEW'S -->
 <section class="reviews">
-   <h1 class="title">clients reviews</h1>
+   <h1 class="title">Clients Reviews</h1>
    <div class="box-container">
       <div class="box">
-         <img src="images/pic1.jpg" alt="">
+         <img src="../images/pic1.jpg" alt="">
          <p>The spices here are truly premium quality.</p>
          <div class="stars">
             <i class="fas fa-star"></i>
@@ -78,7 +87,7 @@
          <h3>Lee Chan</h3>
       </div>
       <div class="box">
-         <img src="images/pic2.jpg" alt="">
+         <img src="../images/pic2.jpg" alt="">
          <p>这里的香料非常棒，新鲜又香浓</p>
          <div class="stars">
             <i class="fas fa-star"></i>
@@ -90,7 +99,7 @@
          <h3>Yee Xuan</h3>
       </div>
       <div class="box">
-         <img src="images/pic7.png" alt="">
+         <img src="../images/pic7.png" alt="">
          <p>Rempahnya segar dan berkualiti tinggi.</p>
          <div class="stars">
             <i class="fas fa-star"></i>
@@ -102,7 +111,7 @@
          <h3>Syauqina</h3>
       </div>
       <div class="box">
-         <img src="images/pic4.jpg" alt="">
+         <img src="../images/pic4.jpg" alt="">
          <p>The spices are so fresh and fragrant! They've completely transformed my cooking.</p>
          <div class="stars">
             <i class="fas fa-star"></i>
@@ -114,7 +123,7 @@
          <h3>Joanne Loi</h3>
       </div>
       <div class="box">
-         <img src="images/pic6.jpg" alt="">
+         <img src="../images/pic6.jpg" alt="">
          <p>Saya suka kerana ia organik dan menyokong petani tempatan.</p>
          <div class="stars">
             <i class="fas fa-star"></i>
@@ -126,7 +135,7 @@
          <h3>Aqif Iman</h3>
       </div>
       <div class="box">
-         <img src="images/pic6.jpg" alt="">
+         <img src="../images/pic6.jpg" alt="">
          <p>种类很多，而且都是有机的！支持本地农民，很值得推荐</p>
          <div class="stars">
             <i class="fas fa-star"></i>
@@ -140,6 +149,7 @@
    </div>
 </section>
 
+   <!-- FOOTER -->
 <footer class="footer">
     <section class="box-container">
        <div class="box">
@@ -158,8 +168,8 @@
        </div>
        <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i> +123-456-7890 </p>
-          <p> <i class="fas fa-phone"></i> +111-222-3333 </p>
+          <p> <i class="fas fa-phone"></i> +03-111-2222 </p>
+          <p> <i class="fas fa-phone"></i> +03-222-3333 </p>
           <p> <i class="fas fa-envelope"></i> jommakan@gmail.com </p>
           <p> <i class="fas fa-map-marker-alt"></i> Penang, Malaysia - 10150 </p>
        </div>
@@ -174,7 +184,7 @@
     <p class="credit"> &copy; CAT201 Project 2024 by <span>Team YumYum</span> | Jom Makan </p>
  </footer>
 
-<script src="js/script.js"></script>
+ <script src="../js/script.js"></script>
 
 </body>
 </html>
