--- a/CAT201_PROJECT/html/admin_orders.html
+++ b/CAT201_PROJECT/html/admin_orders.html
@@ -10,7 +10,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
    <!-- custom css file link  -->
-   <link rel="stylesheet" href="css/admin_style.css">
+   <link rel="stylesheet" href="../css/admin_style.css">
 
 </head>
 <body>
@@ -30,7 +30,7 @@
             <div id="user-btn" class="fas fa-user"></div>
          </div>
          <div class="profile">
-            <img src="uploaded_img/default.png" alt="">
+            <img src="../uploaded_img/default.png" alt="">
             <p>Admin</p>
             <a href="admin_update_profile.html" class="btn">update profile</a>
             <a href="login.html" class="delete-btn">logout</a>
@@ -42,11 +42,12 @@
       </div>
    </header>
 
+   <!-- SHOW PLACED ORDER -->
 <section class="placed-orders">
-
    <h1 class="title">placed orders</h1>
 
    <div class="box-container">
+      <!-- if not order placed yet, it will display... -->
       <p class="empty">no orders placed yet!</p>
    </div>
 
@@ -64,16 +65,17 @@
       </div>
       <div class="box">
          <h3>contact info</h3>
-         <p> <i class="fas fa-phone"></i> +123-456-7890 </p>
+         <p> <i class="fas fa-phone"></i> +03-111-2222 </p>
          <p> <i class="fas fa-phone"></i> +111-222-3333 </p>
-         <p> <i class="fas fa-envelope"></i> adminpanel@gmail.com </p>
-         <p> <i class="fas fa-map-marker-alt"></i> Kuala Lumpur, Malaysia - 50000 </p>
+         <p> <i class="fas fa-envelope"></i> adminpanel_jommakan@gmail.com </p>
+         <p> <i class="fas fa-map-marker-alt"></i> Penang, Malaysia - 50000 </p>
       </div>
    </section>
-   <p class="credit"> &copy; Admin Panel 2024 | <span>Jom Makan Team</span> </p>
+   <p class="credit"> &copy; Admin Panel 2024 | Team YumYum <span>Jom Makan </span> </p>
 </footer>
 
-<script src="js/script.js"></script>
+<script src="../js/script.js"></script>
+
 
 </body>
 </html>
