modified:   CAT201_PROJECT/html/cart.html 	modified:   CAT201_PROJECT/html/category.html 	modified:   CAT201_PROJECT/html/checkout.html 	modified:   CAT201_PROJECT/html/contact.html 	modified:   CAT201_PROJECT/html/home.html 	modified:   CAT201_PROJECT/html/login.html 	modified:   CAT201_PROJECT/html/orders.html 	modified:   CAT201_PROJECT/html/register.html 	modified:   CAT201_PROJECT/html/search_page.html 	modified:   CAT201_PROJECT/html/shop.html 	modified:   CAT201_PROJECT/html/user_profile_update.html 	modified:   CAT201_PROJECT/html/view_page.html 	modified:   CAT201_PROJECT/html/wishlist.html

--- a/CAT201_PROJECT/html/orders.html
+++ b/CAT201_PROJECT/html/orders.html
@@ -1,3 +1,4 @@
+<!-- ORDERS THAT THIS USER MAKE / HISTORY PURCHASE -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -33,7 +34,7 @@
          <a href="cart.html"><i class="fas fa-shopping-cart"></i><span>(0)</span></a>
       </div>
       <div class="profile">
-         <img src="uploaded_img/default.png" alt="">
+         <img src="../uploaded_img/default.png" alt="">
          <p>Guest</p>
          <a href="user_profile_update.html" class="btn">update profile</a>
          <a href="login.html" class="delete-btn">logout</a>
@@ -46,9 +47,8 @@
 </header>
 
 <section class="placed-orders">
-
    <h1 class="title">placed orders</h1>
-
+   <!-- IF NEVER PLACED ORDER BEFORE... -->
    <div class="box-container">
       <p class="empty">no orders placed yet!</p>
    </div>
@@ -73,8 +73,8 @@
        </div>
        <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i> +123-456-7890 </p>
-          <p> <i class="fas fa-phone"></i> +111-222-3333 </p>
+          <p> <i class="fas fa-phone"></i> +03-111-2222 </p>
+          <p> <i class="fas fa-phone"></i> +03-222-3333 </p>
           <p> <i class="fas fa-envelope"></i> jommakan@gmail.com </p>
           <p> <i class="fas fa-map-marker-alt"></i> Penang, Malaysia - 10150 </p>
        </div>
