--- a/CAT201_PROJECT/html/register.html
+++ b/CAT201_PROJECT/html/register.html
@@ -1,3 +1,4 @@
+<!-- NEW USER TO THE WEBSITE -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,7 +17,6 @@
 <body>
 
 <section class="form-container">
-
    <form action="#" enctype="multipart/form-data" method="POST">
       <h3>register now</h3>
       <input type="text" name="name" class="box" placeholder="enter your name" required>
