--- a/CAT201_PROJECT/html/user_profile_update.html
+++ b/CAT201_PROJECT/html/user_profile_update.html
@@ -45,12 +45,11 @@
    </div>
 </header>
 
+   <!-- USER UPDATE THEIR PROFILE -->
 <section class="update-profile">
-
    <h1 class="title">update profile</h1>
-
    <form action="#" method="POST" enctype="multipart/form-data">
-      <img src="uploaded_img/default.png" alt="">
+      <img src="../uploaded_img/default.png" alt="">
       <div class="flex">
          <div class="inputBox">
             <span>username :</span>
@@ -95,8 +94,8 @@
        </div>
        <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i> +123-456-7890 </p>
-          <p> <i class="fas fa-phone"></i> +111-222-3333 </p>
+          <p> <i class="fas fa-phone"></i> +03-111-2222 </p>
+          <p> <i class="fas fa-phone"></i> +03-222-3333 </p>
           <p> <i class="fas fa-envelope"></i> jommakan@gmail.com </p>
           <p> <i class="fas fa-map-marker-alt"></i> Penang, Malaysia - 10150 </p>
        </div>
