--- a/CAT201_PROJECT/html/cart.html
+++ b/CAT201_PROJECT/html/cart.html
@@ -33,7 +33,7 @@
          <a href="cart.html"><i class="fas fa-shopping-cart"></i><span>(0)</span></a>
       </div>
       <div class="profile">
-         <img src="uploaded_img/default.png" alt="">
+         <img src="../uploaded_img/default.png" alt="">
          <p>Guest</p>
          <a href="user_profile_update.html" class="btn">update profile</a>
          <a href="login.html" class="delete-btn">logout</a>
@@ -45,11 +45,11 @@
    </div>
 </header>
 
+ <!-- ADD TO CART ITEM -->
 <section class="shopping-cart">
-
    <h1 class="title">products added</h1>
-
    <div class="box-container">
+      <!-- if nothing added into cart -->
       <p class="empty">your cart is empty</p>
    </div>
 
@@ -57,10 +57,10 @@
     <!-- Function for calculate total -->
       <p>grand total : <span>RM0/-</span></p> 
       <a href="shop.html" class="option-btn">continue shopping</a>
+      <!-- if have item than delete button can function -->
       <a href="#" class="delete-btn disabled">delete all</a>
-      <a href="#" class="btn disabled">proceed to checkout</a>
+      <a href="checkout.html" class="option-btn">proceed to checkout</a>
    </div>
-
 </section>
 
 <footer class="footer">
@@ -81,8 +81,8 @@
       </div>
       <div class="box">
          <h3>contact info</h3>
-         <p> <i class="fas fa-phone"></i> +123-456-7890 </p>
-         <p> <i class="fas fa-phone"></i> +111-222-3333 </p>
+         <p> <i class="fas fa-phone"></i> +03-111-2222 </p>
+         <p> <i class="fas fa-phone"></i> +03-222-3333 </p>
          <p> <i class="fas fa-envelope"></i> jommakan@gmail.com </p>
          <p> <i class="fas fa-map-marker-alt"></i> Penang, Malaysia - 10150 </p>
       </div>
