--- a/CAT201_PROJECT/html/checkout.html
+++ b/CAT201_PROJECT/html/checkout.html
@@ -52,10 +52,12 @@
    <div class="grand-total">grand total : <span>RM0/-</span></div> 
 </section>
 
+   <!-- CHECKOUT ORDER -->
 <section class="checkout-orders">
    <form action="#" method="POST">
       <h3>place your order</h3>
       <div class="flex">
+         <!-- ENTER ORDER INFORMATION -->
          <div class="inputBox">
             <span>your name :</span>
             <input type="text" name="name" placeholder="enter your name" class="box" required>
@@ -71,7 +73,7 @@
          <div class="inputBox">
             <span>payment method :</span>
             <select name="method" class="box" required>
-               <option value="cash on delivery">cash on delivery</option>
+               <option value="cash on delivery">cash on delivery (only for malaysian)</option>
                <option value="credit card">credit card</option>
                <option value="paytm">touch n go</option>
                <option value="paypal">paypal</option>
@@ -124,8 +126,8 @@
        </div>
        <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i> +123-456-7890 </p>
-          <p> <i class="fas fa-phone"></i> +111-222-3333 </p>
+          <p> <i class="fas fa-phone"></i> +03-111-2222 </p>
+          <p> <i class="fas fa-phone"></i> +03-222-3333 </p>
           <p> <i class="fas fa-envelope"></i> jommakan@gmail.com </p>
           <p> <i class="fas fa-map-marker-alt"></i> Penang, Malaysia - 10150 </p>
        </div>
