--- a/CAT201_PROJECT/html/contact.html
+++ b/CAT201_PROJECT/html/contact.html
@@ -33,7 +33,7 @@
          <a href="cart.html"><i class="fas fa-shopping-cart"></i><span>(0)</span></a>
       </div>
       <div class="profile">
-         <img src="uploaded_img/default.png" alt="">
+         <img src="../uploaded_img/default.png" alt="">
          <p>Guest</p>
          <a href="user_profile_update.html" class="btn">update profile</a>
          <a href="login.html" class="delete-btn">logout</a>
@@ -45,6 +45,7 @@
    </div>
 </header>
 
+ <!-- USER/CUSTOMER ABLE TO SEND US MESSAGE -->
 <section class="contact">
    <h1 class="title">get in touch</h1>
    <form action="#" method="POST">
@@ -74,8 +75,8 @@
        </div>
        <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i> +123-456-7890 </p>
-          <p> <i class="fas fa-phone"></i> +111-222-3333 </p>
+          <p> <i class="fas fa-phone"></i> +03-111-2222 </p>
+          <p> <i class="fas fa-phone"></i> +03-222-3333 </p>
           <p> <i class="fas fa-envelope"></i> jommakan@gmail.com </p>
           <p> <i class="fas fa-map-marker-alt"></i> Penang, Malaysia - 10150 </p>
        </div>
