--- a/CAT201_PROJECT/html/home.html
+++ b/CAT201_PROJECT/html/home.html
@@ -33,9 +33,9 @@
          <a href="cart.html"><i class="fas fa-shopping-cart"></i><span>(0)</span></a>
       </div>
       <div class="profile">
-         <img src="uploaded_img/default.png" alt="">
+         <img src="../uploaded_img/default.png" alt="">
          <p>Guest</p>
-         <a href="user_profile_update.html" class="btn">update profile</a>
+         <a href="../user_profile_update.html" class="btn">update profile</a>
          <a href="login.html" class="delete-btn">logout</a>
          <div class="flex-btn">
             <a href="login.html" class="option-btn">login</a>
@@ -60,25 +60,31 @@
    <h1 class="title">shop by category</h1>
    <div class="box-container">
       <div class="box">
-         <img src="images/cat1.png" alt="">
+         <!-- CATEGORY 1 - AROMATIC SPICES -->
+         <img src="../images/cat1.png" alt="">
          <h3>Aromatic Spices</h3>
          <p>Enhance your dishes with the irresistible fragrance of aromatic spices like cinnamon, cardamom, and cloves. Perfect for creating flavorful curries, desserts, and aromatic rice dishes that captivate the senses.</p>
+         <!-- jump to category page when click on 'See More' button. -->
          <a href="category.html?category=spices" class="btn">See More</a>
       </div>
       <div class="box">
-         <img src="images/cat2.png" alt="">
+         <!-- CATEGORY 2 - SPICY -->
+         <img src="../images/cat2.png" alt="">
          <h3>Hot and Spicy</h3>
          <p>Turn up the heat with our selection of chilies, pepper, and ginger. Add bold flavors and fiery zest to your meals, from sambals to stir-fries, for those who crave a spicy kick.</p>
+         <!-- jump to category page when click on 'Shop Now' button. -->
          <a href="category.html?category=spicy" class="btn">Shop Now</a>
       </div>
       <div class="box">
-         <img src="images/cat3.png" alt="">
+         <!-- CATEGORY 3 - NUT -->
+         <img src="../images/cat3.png" alt="">
          <h3>Sweet and Nutty</h3>
          <p>Indulge in the warm, comforting flavors of nutmeg, fennel, and anise. These sweet and nutty spices are ideal for desserts, stews, and festive treats, adding a hint of sweetness and complexity.</p>
          <a href="category.html?category=nutty" class="btn">See More</a>
       </div>
       <div class="box">
-         <img src="images/cat4.png" alt="">
+         CATEGORY 4 - HERBAL
+         <img src="../images/cat4.png" alt="">
          <h3>Herbal</h3>
          <p>Discover the natural goodness of herbal flavors with lemongrass, pandan, and curry leaves. These fresh and earthy spices bring vibrant, wholesome notes to soups, teas, and traditional Malaysian dishes.</p>
          <a href="category.html?category=herbal" class="btn">Shop Now</a>
@@ -86,6 +92,7 @@
    </div>
 </section>
 
+ <!-- WHEN NEW PRODUCT IS ADDED BY ADMIN... -->
 <section class="products">
    <h1 class="title">latest products</h1>
    <div class="box-container">
@@ -111,8 +118,8 @@
       </div>
       <div class="box">
          <h3>contact info</h3>
-         <p> <i class="fas fa-phone"></i> +123-456-7890 </p>
-         <p> <i class="fas fa-phone"></i> +111-222-3333 </p>
+         <p> <i class="fas fa-phone"></i> +03-111-2222 </p>
+         <p> <i class="fas fa-phone"></i> +03-222-3333 </p>
          <p> <i class="fas fa-envelope"></i> jommakan@gmail.com </p>
          <p> <i class="fas fa-map-marker-alt"></i> Penang, Malaysia - 10150 </p>
       </div>
