--- a/CAT201_PROJECT/html/login.html
+++ b/CAT201_PROJECT/html/login.html
@@ -22,6 +22,7 @@
       <input type="email" name="email" class="box" placeholder="enter your email" required>
       <input type="password" name="pass" class="box" placeholder="enter your password" required>
       <input type="submit" value="login now" class="btn" name="submit">
+      <!-- new user will request to register an account before continue -->
       <p>don't have an account? <a href="register.html">register now</a></p>
    </form>
 
