--- a/CAT201_PROJECT/html/search_page.html
+++ b/CAT201_PROJECT/html/search_page.html
@@ -46,20 +46,17 @@
 </header>
 
 <section class="search-form">
-
    <form action="#" method="POST">
       <input type="text" class="box" name="search_box" placeholder="search products...">
       <input type="submit" name="search_btn" value="search" class="btn">
    </form>
-
 </section>
 
+   <!-- IF THE PRODUCT NOT IN LIST -->
 <section class="products" style="padding-top: 0; min-height:100vh;">
-
    <div class="box-container">
       <p class="empty">no result found!</p>
    </div>
-
 </section>
 
 <footer class="footer">
@@ -80,8 +77,8 @@
        </div>
        <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i> +123-456-7890 </p>
-          <p> <i class="fas fa-phone"></i> +111-222-3333 </p>
+          <p> <i class="fas fa-phone"></i> +03-111-2222 </p>
+          <p> <i class="fas fa-phone"></i> +03-222-3333 </p>
           <p> <i class="fas fa-envelope"></i> jommakan@gmail.com </p>
           <p> <i class="fas fa-map-marker-alt"></i> Penang, Malaysia - 10150 </p>
        </div>
