--- a/CAT201_PROJECT/html/shop.html
+++ b/CAT201_PROJECT/html/shop.html
@@ -36,7 +36,7 @@
          <img src="uploaded_img/default.png" alt="">
          <p>Guest</p>
          <a href="user_profile_update.html" class="btn">update profile</a>
-         <a href="logout.html" class="delete-btn">logout</a>
+         <a href="login.html" class="delete-btn">logout</a>
          <div class="flex-btn">
             <a href="login.html" class="option-btn">login</a>
             <a href="register.html" class="option-btn">register</a>
@@ -45,6 +45,7 @@
    </div>
 </header>
 
+   <!-- SHOW THE PRODUCT BY CATEGORY -->
 <section class="p-category">
    <a href="category.html?category=spices">Aromatic Spices</a>
    <a href="category.html?category=nutty">Sweet and Nutty</a>
@@ -77,8 +78,8 @@
        </div>
        <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i> +123-456-7890 </p>
-          <p> <i class="fas fa-phone"></i> +111-222-3333 </p>
+          <p> <i class="fas fa-phone"></i> +03-111-2222 </p>
+          <p> <i class="fas fa-phone"></i> +03-222-3333 </p>
           <p> <i class="fas fa-envelope"></i> jommakan@gmail.com </p>
           <p> <i class="fas fa-map-marker-alt"></i> Penang, Malaysia - 10150 </p>
        </div>
