--- a/CAT201_PROJECT/html/wishlist.html
+++ b/CAT201_PROJECT/html/wishlist.html
@@ -46,13 +46,12 @@
      </header>     
 
 <section class="wishlist">
-
    <h1 class="title">products added</h1>
-
    <div class="box-container">
       <p class="empty">your wishlist is empty</p>
    </div>
 
+   <!-- calculate total price for item that add into wishlist -->
    <div class="wishlist-total">
       <p>grand total : <span>RM0/-</span></p>
       <a href="shop.html" class="option-btn">continue shopping</a>
@@ -79,8 +78,8 @@
        </div>
        <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i> +123-456-7890 </p>
-          <p> <i class="fas fa-phone"></i> +111-222-3333 </p>
+          <p> <i class="fas fa-phone"></i> +03-111-2222 </p>
+          <p> <i class="fas fa-phone"></i> +03-222-3333 </p>
           <p> <i class="fas fa-envelope"></i> jommakan@gmail.com </p>
           <p> <i class="fas fa-map-marker-alt"></i> Penang, Malaysia - 10150 </p>
        </div>
